fix flex-wrap

--- a/src/styles/uiKit/mixins.scss
+++ b/src/styles/uiKit/mixins.scss
@@ -107,6 +107,7 @@
         color: #8B909A;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     .total {
